--- a/app/views/tweets/confirm.html.erb
+++ b/app/views/tweets/confirm.html.erb
@@ -1,11 +1,16 @@
-<h1>Tweets#confirm</h1>
-<%= form_for(@tweet) do |f| %>
-    <%= f.hidden_field :content %>
-    <p>投稿内容：<%= @tweet.content %></p>
-    <%= f.submit "投稿" %>
-<% end %>
-
-<%= form_for(@tweet, url: tweets_path, method: "get" ) do |f| %>
-    <%= f.hidden_field :content %>
-    <%= f.submit "戻る", name: "back" %>
-<% end %>
+<div class="container">
+    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+        <h1>投稿確認画面</h1>
+        <%= form_for(@tweet) do |f| %>
+            <%= f.hidden_field :content %>
+            <h4>下記の内容で投稿してよろしいですか？</h4>
+            <p>投稿内容：<%= @tweet.content %></p>
+            <%= f.submit "投稿", class: 'btn btn-default btn-sm btn-success btn-block'%>
+        <% end %>
+        
+        <%= form_for(@tweet, url: tweets_path, method: "get" ) do |f| %>
+            <%= f.hidden_field :content %>
+            <%= f.submit "ツイート一覧表示画面へ戻る", name: "back" , class: 'btn btn-default btn-sm btn-block'%>
+        <% end %>
+    </div>
+</div>
