--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,17 +1,25 @@
-<h1>Tweets#edit</h1>
-<%= form_for(@tweet) do |f| %>
-    <% if @tweet.errors.any? %>
-        <div id="error_explanation">
-            <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
-            <ul>
-                <% @tweet.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-                <% end %>
-            </ul>
-        </div>
-    <% end %>
-    <%= f.label :content %>
-    <%= f.text_field :content %>
-    <%= f.submit "投稿" %>
-    <%= link_to "戻る", tweets_path %>
-<% end %>
+<div class="container">
+    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+        <h1>投稿編集画面</h1>
+        <%= form_for(@tweet) do |f| %>
+            <% if @tweet.errors.any? %>
+                <div id="error_explanation">
+                    <h4><%= @tweet.errors.count %>件のエラーがあります。</h4>
+                    <ul>
+                        <% @tweet.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                        <% end %>
+                    </ul>
+                </div>
+            <% end %>
+            <% f.label :content %>
+            <%= f.text_area :content, class: "form-control", rows: "3" %>
+            <div class="align-right">
+                <%= f.submit "投稿", class: 'btn btn-default btn-sm btn-success btn-block' %>
+                <br>
+                <%= link_to "ツイート一覧表示画面へ戻る", tweets_path %>
+            </div>
+        <% end %>
+    </div>
+</div>        
+
