--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,25 +1,37 @@
-<h1>Tweets#index</h1>
-
-<p><%= notice %></p>
-
-<%= form_for(@tweet, url:confirm_tweets_path) do |f| %>
-    <% if @tweet.errors.any? %>
-        <div id="error_explanation">
-            <h2><%= @tweet.errors.count %>件のエラーがあります。</h2>
-            <ul>
-                <% @tweet.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-                <% end %>
-            </ul>
-        </div>
-    <% end %>
-    <%= f.label :content %>
-    <%= f.text_field :content %>
-    <%= f.submit "投稿" %>
-<% end %>
-
-<% @tweets.each do |t| %>
-    <p><%= t.content %></p>
-    <%= link_to "編集", edit_tweet_path(t.id) %>
-    <%= link_to "削除", tweet_path(t.id), method: :delete, data: {confirm: '本当にこのツイートを削除してよろしいですか？'} %>
-<% end %>
+<div class="container">
+    <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+        <br/>
+        <p><%= notice %></p>    
+        <%= form_for(@tweet, url:confirm_tweets_path) do |f| %>
+            <% if @tweet.errors.any? %>
+                <div id="error_explanation">
+                    <h4><%= @tweet.errors.count %>件のエラーがあります。</h4>
+                    <ul>
+                        <% @tweet.errors.full_messages.each do |msg| %>
+                        <li><%= msg %></li>
+                        <% end %>
+                    </ul>
+                </div>
+            <% end %>
+            <h3>新規ツイート投稿</h3>
+            <% f.label :content %>
+            <%= f.text_area :content, class: "form-control", rows: "3" %>
+            <div class="align-right">
+                <%= f.submit "投稿", class: "btn btn-primary btn-sm" %>
+            </div>
+        <% end %>
+        <h3>投稿ツイート一覧</h3>
+        <% @tweets.each do |t| %>
+            <div class="row content">
+                <p>
+                    <small><%= t.created_at %>に投稿</small><br>
+                    <%= t.content %>
+                </p>
+                <div class="align-right">
+                    <%= link_to "編集", edit_tweet_path(t.id) , class: 'btn btn-default btn-sm btn-success'%>
+                    <%= link_to "削除", tweet_path(t.id), method: :delete, data: {confirm: '本当にこのツイートを削除してよろしいですか？'}, class: 'btn btn-default btn-sm btn-danger' %>
+                </div>
+            </div>
+        <% end %>
+    </div>
+</div><!--.container-->
